--- a/sources/part2/06-req-class.adoc
+++ b/sources/part2/06-req-class.adoc
@@ -187,7 +187,11 @@ for conformance purposes is not permitted.
 ==== Optional Requirements class: Schematron extension
 
 Schematron (<<iso19757-3>>) provides a notation with which many constraints on XML
-documents can be expressed. This requirements class covers any standard that
+documents can be expressed. As such, Schematron is a rule-based validation language for making 
+assertions about the presence or absence of patterns in XML trees. It is a structural schema 
+language expressed in XML using a small number of elements and XPath languages.
+
+This requirements class covers any standard that
 uses Schematron to create patterns or constrains for an XML Schema. 
 
 [cols="1,4",width="90%"]
