--- a/sources/sections/ac-definitions.adoc
+++ b/sources/sections/ac-definitions.adoc
@@ -1,6 +1,6 @@
 [[annex-C]]
 [appendix,obligation=informative]
-== Definitions
+== ModSpec UML Model, semantics, and Definitions
 
 === Semantically ordered definitions
 
