--- a/sources/sections/01-scope.adoc
+++ b/sources/sections/01-scope.adoc
@@ -16,8 +16,8 @@ NOTE: For OGC Standards work, the word “standard” in the ModSpec applies to 
 
 Therefore, a standard that follows the rules specified in the ModSpec presents requirements organized in requirements classes which must be satisfied by passing the tests defined in a conformance suite (also known as the Abstract Test Suite in an OGC Standard). These tests are organized into conformance classes, each of which represents a mechanism for partial satisfaction of the standard. This results in a standard having a modular structure, where each requirements class has a corresponding conformance (test) class. In a well written standard, the normative clauses and any model or schema are organized in a manner that parallels the requirements and conformance clauses. A goal of the design pattern is the ability to define requirements classes and associated conformance classes that can be used across multiple standards. 
 
-<<Annex-B>> defines the UML model upon which the ModSpec is
-based. Annex B also contains informal and non-normative definitions ordered for ease
+<<Annex C,Annex-C>> defines the UML model upon which the ModSpec is
+based. Annex C also contains informal and non-normative definitions ordered for ease
 of understanding. These two sections can be read first to aid in the understanding of
 the rest of the document.
 
