--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -1,94 +1,15 @@
 [[cls-6]]
-== Key Concepts and the ModSpec Core Requirements Class
-
-This clause defines the key concepts and requirements that define the ModSpec Core Requirements Class.
-
-[[cls-6-1]]
-=== The ModSpec and the "Form" of a standard
-
-NOTE: For OGC Standards, the assumption is that documents are in a commonly used
-logical form (template). 
-
-In informative sections, the use of the word "will" implies that something is an implication of a requirement. The "will" statements are not requirements but explain the consequence of requirements.
-
-The ModSpec defines a "requirement" of a standard as an atomic testable
-criterion. See the formal definition of requirement in <<term-requirement>>
-
-A UML representation of important properties of this model is given in <<annex-B-2>>.
-
-==== Standardization Context - Goals and Targets
-
-Every OGC Standard document shall include a Standardization Goal. This is a concise statement of the problem that the Standard helps address and the strategy envisioned for achieving a solution.  This strategy typically identifies real-world entities that need to be modified or constrained.  At the abstract level, those entities are the Standardization Target Types.  These are the classes of entities to be standardized. A Standard defines the requirements levied on one or more Standardization Target Types. 
-
-Instances of a Standardization Target Type are the Standardization Targets.  These are the real-world manifestations of the Standardization Target Type.  In summary:
-
-* Standardization Goal – identifies the problem and identifies the actors and entities involved in solving that problem
-* Standardization Target Type – An abstract representation of one of the actors or entities identified in the Standardization Goal
-* Standardization Target – an implementation of a Standardization Target Type. These are the real-world entities which can be tested for conformance with the requirements documented in the Standard.
-
-Standardization Target Types can be hierarchical.  The Conceptual, Logical, Physical hierarchy is one example where the Standardization Target Types are information models. Another example would be implementations of OGC API - Features Part 2 which support XML data exchange.
-
-Notice that the Standardization Targets and Standardization Target Types no longer form a simple taxonomy. The Standardization Target Types, Standardization Targets, and Standardization Goal provide a well-defined context for the standard.  This will help users of standards to quickly understand the scope of a Standard and to select those Standards appropriate for their needs. It also will help keep Standards developers focused on the intended use of their standards, avoiding standards which are overly broad and/or unfocused.
-
-==== Conformance, Requirements, and key information
-
-In the conformance test suite, there will be a test defined to verify the validity of
-the claim that an implementation of the standard (standardization target) satisfies
-each mandatory requirement specified in the standard. Since the normative language of the body of the standard and the
-conformance test classes both define what conformance to the standard means, they
-will be equivalent in a well-written standard. The ModSpec requires
-a standards document to be well-written, at least in stating requirements and conformance
-tests.
-
-Conformance tests are aggregated into conformance classes that specify how certain
-"certificates of conformance" are achieved. The natural inclination is to aggregate
-the requirements. The issue that blocks this approach is that some requirements are
-optional while others are mandatory. To achieve a cleaner separation of requirements,
-the ModSpec separates them into sets (called "requirements classes"), each of which
-has no optional components. Since the normative statement of each requirement is only 
-declared once and is uniquely identified as such, each requirement will be in a clause associated to its requirements class.
-
-Therefore, the ModSpec defines a "requirements class" as a set of requirements that must
-all be passed to achieve a particular conformance class (see
-<<term-conformance-test-class>>). This document also includes a "middle" structure
-called a conformance test module. Requirements modules
-parallel the conformance test modules. A standard written to the ModSpec may
-use this "module" structure in any manner consistent with the rest of this Policy.
-
-A standard may have mandatory and optional requirements classes.  This allows the options
-in the testing procedure to be grouped into non-varying mandatory and optional conformance classes.
-Each requirement within an optional requirements class is mandatory when that requirements class is
-implemented. When needed, a particular requirements class may contain only a single
-requirement.
-
-However, care must be taken, since the requirements classes may not always in a one-to-one
-correspondence to conformance classes in other standards which may be the source of
-requirements for a standard conformant to the ModSpec. If other standards are
-used, their options shall be specified to be useable within a standard conformant to
-this policy, see <<cls-6-5-1>>.
-
-Conformance classes may contain dependencies on one another. These are represented by
-tests in one conformance class that state that another conformance class must be
-passed to qualify to pass this conformance class. In terms of requirements, that says
-that the dependent conformance class contains tests (by reference) for all
-requirements of the "included" conformance class.
-
-As defined in the ModSpec, one requirements
-class is dependent on another if the other is included through such a reference. In
-this manner, requirements classes can be treated as sets of requirements (each in a
-single requirements class but included in others by reference to its "home"
-requirements class).
-
-In the ModSpec, each conformance requirement is separated in its own labeled
-paragraph, such as <<req-1>> above.
-
-The distribution of the information in a standard is not restricted. The only
-requirement is that requirements be grouped in a manner
-consistent with the conformance test classes, see <<req-6>> and <<req-7>>. 
-
-=== ModSpec Requirements Class: Core
+== Requirements Class: Core
 
 The following requirements specify the rules for the content and structure of a modular standard. These requirements are also known as the `core` of the ModSpec.
+
+[[req-0]]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ000* | */req/core/ogc-compliance* +
+Any new OGC Standard, abstract specification that contains requirements, or major revision of an existing OGC Standard _SHALL_ comply with the requirements stated in this document.
+|===
 
 [[req-1]]
 [requirement,model=ogc,type="general"]
