--- a/sources/part1/document.adoc
+++ b/sources/part1/document.adoc
@@ -21,7 +21,7 @@
 :local-cache-only:
 :data-uri-image:
 
-include::../sections/00-preface.adoc[]
+include::00-preface.adoc[]
 
 include::00-foreword.adoc[]
 
