--- a/sources/part2/00-preface.adoc
+++ b/sources/part2/00-preface.adoc
@@ -31,7 +31,7 @@ The following OGC Members participated in editing this document:
 |===
 ^h| Person ^h| Organization Represented
 | Carl Reed | Carl Reed & Associates
-| Chuck Heazel | Heazeltech
+| John Herring | Oracle
 |===
 
 [.preface]
@@ -46,26 +46,6 @@ The following OGC Members contributed and particpated in developing Version 2 of
 | Chuck Heazel | Heazeltech
 | Clemens Portele | interactive instruments GmbH
 | Jeff Yutzler | ImageMatters
-|===
-
-[.preface]
-== Acknowledgements
-
-The following OGC Members were key contributors to Version 1 of the ModSpec
-
-[%unnumbered]
-|===
-^h| Person ^h| Organization Represented
-| Simon Cox | CSIRO
-| David Danko | ESRI
-| James Greenwood | SeiCorp, Inc.
-| John R. Herring | Oracle USA
-| Andreas Matheus | University of the Bundeswehr -- ITS
-| Richard Pearsall | US National Geospatial-Intelligence Agency (NGA)
-| Clemens Portele | interactive instruments GmbH
-| Barry Reff | US Department of Homeland Security (DHS)
-| Paul Scarponcini | Bentley Systems, Inc.
-| Arliss Whiteside | BAE Systems - C3I Systems
 |===
 
 [.preface]
