Add acknowledgements annex

--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -51,3 +51,4 @@ include::sections/ac-definitions.adoc[]
 
 include::sections/ad-bibliography.adoc[]
 
+include::sections/ae-acknowledgements.adoc[]
