--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -1,17 +1,19 @@
 [.preface]
 == Preface
 
-This OGC member developed and approved document defines a model and related requirements and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable the consistent and verifiable testing of implementations of a standard that claim conformance.
+This OGC member developed and approved document, referred to as the `ModSpec`, defines a model and related requirements and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable the consistent and verifiable testing of implementations of a standard that claim conformance.
 
 The goal is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
+///
 NOTE: For OGC only: Any new OGC Standard, abstract specification that contains requirements, or major revision of an existing OGC Standard shall comply with the requirements stated in this document.
+///
 
 NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be refered to as the "OGC ModSpec".
 
 Suggested additions, changes, and comments on this this document are welcome and
 encouraged. Such suggestions may be submitted through the OGC Change Request System
-(http://www.opengeospatial.org/standards/cr) or by creating an issue in the GitHub repository for this document (https://github.com/opengeospatial/ogc-modspec).
+(http://ogc.standardstracker.org/) or by creating an issue in the OGC ModSpec GitHub repository (https://github.com/opengeospatial/ogc-modspec).
 
 [.preface]
 == Document terms and definitions
@@ -20,7 +22,7 @@ This document uses the standard terms defined in Subclause 5.3 of [OGC 05-008], 
 is based on the ISO/IEC Directives, Part 2. Rules for the structure and drafting of
 International Standards. In particular, the word "shall" (not "must") is the
 imperative verb form used to indicate a requirement to be strictly followed to
-conform to this standard.
+conform to the ModSpec.
 
 [.preface]
 == Document editors
